[package]
name = "indexer-base"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.51"
base64 = "0.11"
bigdecimal = { version = "0.2", features = ["serde"] }
cached = "0.23.0"
clap = { version = "3.1.4", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
num-traits = "0.2.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
syn = "1.0.90"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
quote = "1.0.17"

near-crypto = { git = "https://github.com/near/nearcore", rev = "5f09a3bf042b32d1ff26554433ad6449199ea02a" }
near-indexer-primitives = "0.12.0"
near-lake-framework = "0.3.0"
