[package]
name = "indexer-events"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[lib]
proc-macro = true

[dependencies]
actix-web = "=4.0.1"
anyhow = "1.0.51"
avro-rs = "0.13.0"
base64 = "0.11"
bigdecimal = { version = "0.2", features = ["serde"] }
borsh = "0.9.3"
cached = "0.23.0"
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
lazy_static = "1.4.0"
num-traits = "0.2.11"
primitive-types = { version = "0.10.0", default-features = false, features = ["rlp"] }
prometheus = "0.13.1"
quote = "1.0.17"
regex = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
syn = "1.0.90"
tempfile = "3.3.0"
tokio = { version = "1.8", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.35"
tracing-appender = "0.1.2"
tracing-subscriber = "0.2.4"

near-jsonrpc-primitives = "0.16.0"
near-jsonrpc-client = "0.5.0"
near-lake-framework = "0.7.1"
near-primitives = "0.16.0"

indexer-opts = { path = "../indexer-opts" }
