[package]
name = "indexer-opts"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1.0.51"
aws-types = "0.54.1"
aws-sdk-s3 = "0.24.0"
bigdecimal = { version = "0.2", features = ["serde"] }
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
near-lake-framework = "0.7.1"
near-jsonrpc-client = "0.5.0"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }
tracing = "0.1.35"
